    Wheeler]

  - Revamp retry on serialization failure so that it actually works. The KID
    no longer sleeps and exits, but sleeps and retries the sync on its own,
    only sending a NOTICE to other processes that it is doing so. [GSM and
    David Wheeler]

  - Change the default serialization failure sleep time from 10s to 0.5s.

  - The 'update' command no longer exits with an error code on success.

  - Fixed issue with missing database handles when a KID shuts down. [David
    Wheeler]

  - Remove the customselect parameter. Use the customcols command, instead.
    [David Wheeler]

  - Remove the do_listen parameter, which was just another name for ping.

  - Rename the 'ping' parameter to 'autokick', to better describe what it does
    and to prevent confusion with the 'ping' command, which does something
    totally different. [David Wheeler]

  - Rename standard_conflict to conflict_strategy. [David Wheeler]

  - Move conflict_strategy from add/update table to add/update sync. [David Wheeler]

  - Fix issue that prevented the VAC process from shutting down immediately on
    'stop'. [David Wheeler]

  - Fix failure to restart after database disconnections.

  - Add 'remove sequence' [David Wheeler]

  - Rename most --debug* options to --log-*:
      + --debugdir is now --log-destination
      + --debugfile is deprecated; use '--log-destination none' to disable all logging
      + --debugsyslog is deprecated; use --log-destination syslog'
      + Allow logging to stderr or stdout via --log-destination
      + --log-destination may be specified multiple times for multiple logs
      + --debugfilesep is now --log-separate
      + --debugname is now --log-extension
      + --cleandebugs is now --log-clean
    [David Wheeler]

  - Eliminated 'Use of "goto" to jump into a construct has been deprecated'
    warnings on Perl 5.12 and higher.

  - Removed the 'trigrules' attribute for customcodes. Callers should 